tests/compile/derive-invalid-attribute.stderr
error: Unexpected attribute: ignore
 --> $DIR/derive-invalid-attribute.rs:8:13
  |
8 |     #[merge(ignore)]
  |             ^^^^^^
